Update several files to Java 9+, update gradle toi use gradle 8, and added checkstyle and spotbugs to gradle