@@ -702,8 +702,9 @@ public class TaskPanel extends JPanel {
 	void toggleShowActiveOnly_actionPerformed(ActionEvent e) {
 		Context.put(
 			"SHOW_ACTIVE_TASKS_ONLY",
-			new Boolean(ppShowActiveOnlyChB.isSelected()));
-		taskTable.tableChanged();
+                Boolean.valueOf(ppShowActiveOnlyChB.isSelected()));
+
+        taskTable.tableChanged();
 	}
 
     class PopupListener extends MouseAdapter {
